--- a/DistributionQuery/Info.plist
+++ b/DistributionQuery/Info.plist
@@ -25,6 +25,14 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>需要访问您的相机</string>
+	<key>NSContactsUsageDescription</key>
+	<string>通讯录权限</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>麦克风权限</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要访问您的相册</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
